<resources>
    <string name="app_name">RetoFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresar_nombre">Ingresar nombre</string>
    <string name="ingresar_correo_electronico">Ingresar correo electrónico</string>
    <string name="ingresar_contrasena">Ingresar contraseña</string>
    <string name="terminos">Estoy de acuerdo con los términos</string>
    <string name="ingresar">Ingresar</string>
</resources>